--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "npm test"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "node": "^21.1.0"
+  }
 }
