--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "node": "^21.1.0"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "node": "^21.1.0",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
+    "ws": "^8.14.2"
   }
 }
