--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "crypto": "^1.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "node": "^21.1.0",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
+    "ramda": "^0.29.1",
     "ws": "^8.14.2"
   }
 }
