--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^8.55.0",
     "express": "^4.18.2",
     "http": "^0.0.1-security",
+    "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "node": "^21.1.0",
     "pg": "^8.11.3",
