--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.55.0",
     "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0",
     "http": "^0.0.1-security",
-    "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "node": "^21.1.0",
     "pg": "^8.11.3",
