--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Sagetech Capstone Project",
   "main": "broker.js",
   "scripts": {
-    "test": "npm test"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.5",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -24,5 +25,8 @@
     "prettier": "^2.8.8",
     "ramda": "^0.29.1",
     "ws": "^8.14.2"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
