--- a/dev.env
+++ b/dev.env
@@ -1,6 +1,6 @@
-USER = 'janna'
+USER = 'sage'
 HOST = 'localhost'
-PASSWORD = 'password'
+PASSWORD = '1234'
 DBPORT = 5432
 JWT_SECRET = 'super_dooper_secret'
 DBAUTH = 'AUTH_DB'
