modified .env file to specify variables for oauth

--- a/dev.env
+++ b/dev.env
@@ -1,6 +1,14 @@
-USER = 'sage'
+gtgit cUSER = 'sage'
 HOST = 'localhost'
-DATABASE = 'AUTH_TOKENS'
-PASSWORD = '1234'
+
 DBPORT = 5432
+
+# OAUTH Variables
+USER = 'sage'
+DB_AUTH = 'AUTH_TOKENS'
+PASSWORD_AUTH = '1234'
 JWT_SECRET = 'super_dooper_secret'
+
+# USERS
+
+# BROKER
