Updated db config
- Broker Edits:
  - Integrated `dotenv` for environment variable management.
  - Adjusted `DB_URI` to construct from environment variables for database connection.

- Dummy Client Edits:
  - Updated database configuration to use environment variables.
  - Added `dotenv` configuration to load these variables.

- dev.env Edits:
  - Introduced ADS-B database-specific environment variables (`ADSDB_*`) for clear differentiation.
  - Ensured correct format for `ADSDB_PASSWORD` without mixed quotes for consistency and error prevention.

--- a/dev.env
+++ b/dev.env
@@ -1,16 +1,15 @@
-USER = 'sage'
+gtgit cUSER = 'sage'
 HOST = 'localhost'
 
 DBPORT = 5432
 
 # OAUTH Variables
+USER = 'sage'
 DB_AUTH = 'AUTH_TOKENS'
 PASSWORD_AUTH = '1234'
 JWT_SECRET = 'super_dooper_secret'
 
 # USERS
-DB_USER = ''
-PASSWORD_USER = ''
 
 # BROKER
 ADSDB_USER='postgres'
