add service ports to dev.env

--- a/dev.env
+++ b/dev.env
@@ -1,8 +1,11 @@
-USER = 'sage'
+USER = 'jannatikka'
 HOST = 'localhost'
-PASSWORD = '1234'
+PASSWORD = 'password'
 DBPORT = 5432
 JWT_SECRET = 'super_dooper_secret'
 DBAUTH = 'AUTH_DB'
 DBUSERS = 'USERS_DB'
 DBMSG = 'MESSAGE_DB'
+USERS_SRV_PORT = 3001
+AUTH_SRV_PORT = 3002
+BROKER_SRV_PORT = 3000
