Broker DB Config Update

--- a/dev.env
+++ b/dev.env
@@ -11,3 +11,9 @@ JWT_SECRET = 'super_dooper_secret'
 # USERS
 
 # BROKER
+ADSDB_USER='postgres'
+ADSDB_HOST='localhost'
+ADSDB_DB='database'
+ADSDB_PASSWORD="sagetech123"
+ADSDB_PORT=5432
+
