use prepared statements, add user var to dev.env

--- a/dev.env
+++ b/dev.env
@@ -9,6 +9,8 @@ PASSWORD_AUTH = '1234'
 JWT_SECRET = 'super_dooper_secret'
 
 # USERS
+DB_USER = ''
+PASSWORD_USER = ''
 
 # BROKER
 ADSDB_USER='postgres'
