--- a/dev.env
+++ b/dev.env
@@ -6,7 +6,9 @@ DBPORT = 5432
 # OAUTH Variables
 DB_AUTH = 'AUTH_TOKENS'
 PASSWORD_AUTH = '1234'
-JWT_SECRET = 'super_dooper_secret'
+JWT_SECRET = 'super_dooper_secret' # secret for auth code
+JWT_SECRET2 = 'very_secure_secret' # secret for auth token
+JWT_SECRET3 = 'secreto2'           # secret for refresh token
 
 # USERS
 
