--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "node": "^21.1.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
     "prettier": "^2.8.8",
