--- a/dev.env
+++ b/dev.env
@@ -3,16 +3,17 @@ HOST = 'localhost'
 
 DBPORT = 5432
 
-# OAUTH Variables
+### OAUTH ###
 DB_AUTH = 'AUTH_TOKENS'
 PASSWORD_AUTH = '1234'
+
 JWT_SECRET = 'super_dooper_secret' # secret for auth code
 JWT_SECRET2 = 'very_secure_secret' # secret for auth token
 JWT_SECRET3 = 'secreto2'           # secret for refresh token
 
-# USERS
+### USERS ###
 
-# BROKER
+### BROKER ###
 ADSDB_USER='postgres'
 ADSDB_HOST='localhost'
 ADSDB_DB='database'
