verify all auth tokens + middleware to setup each function call

--- a/dev.env
+++ b/dev.env
@@ -7,6 +7,7 @@ DBPORT = 5432
 DB_AUTH = 'AUTH_TOKENS'
 PASSWORD_AUTH = '1234'
 
+# generate secret password: require('crypto').randomBytes(64).toString('hex')
 JWT_SECRET = 'super_dooper_secret' # secret for auth code
 JWT_SECRET2 = 'very_secure_secret' # secret for auth token
 JWT_SECRET3 = 'secreto2'           # secret for refresh token
