--- a/dev.env
+++ b/dev.env
@@ -1,4 +1,5 @@
-USER = 'sage'
+USER = 'janna'
+#'sage'
 HOST = 'localhost'
 
 DBPORT = 5432
@@ -13,8 +14,8 @@ JWT_SECRET2 = 'very_secure_secret' # secret for auth token
 JWT_SECRET3 = 'secreto2'           # secret for refresh token
 
 ### USERS ###
-DB_USER = ''
-PASSWORD_USER = ''
+DB_USER = 'postgres'
+PASSWORD_USER = 'password'
 
 
 ### BROKER ###
